<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home_android_mobile"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@id/constraint"
        app:layout_constraintEnd_toEndOf="@id/constraint"
        app:layout_constraintStart_toStartOf="@id/constraint"
        app:layout_constraintTop_toTopOf="@id/constraint">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/home_logo"
            app:layout_constraintBottom_toTopOf="@id/title"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/facility_management"
            android:textAlignment="center"
            android:textColor="@color/lightText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintBottom_toTopOf="@id/desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/lightText"
            android:textSize="18sp"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintBottom_toTopOf="@id/button_home_intervento"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_home_intervento"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/lato_regular"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/button_home"
            android:textAlignment="center"
            android:textColorLink="@color/colorAccentHome"
            android:textSize="12sp"

            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@id/button_home_servizi"
            app:layout_constraintEnd_toEndOf="@+id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/desc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_home_servizi"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/button_service"
            android:textAlignment="center"
            android:textSize="12sp"
            app:backgroundTint="#00FFFFFF"
            app:cornerRadius="8dp"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintBottom_toBottomOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toBottomOf="@id/button_home_intervento"
            app:strokeColor="@color/lightText"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>