<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/call_row"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/img_call"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/call_title"
            android:tint="@color/icon_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/call" />

        <TextView
            android:id="@+id/call_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/call_title"
            android:textSize="@dimen/h2_title"
            app:fontFamily="@font/lato_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_call"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/call_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="124dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/phone_number"
            android:textAlignment="textStart"
            app:fontFamily="@font/lato_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/call_title"
            app:layout_constraintTop_toBottomOf="@id/call_title"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mail_row"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/email_title"
            android:tint="@color/icon_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mail" />

        <TextView
            android:id="@+id/email_title"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/email_title"
            android:textAlignment="textStart"
            android:textSize="@dimen/h2_title"
            app:fontFamily="@font/lato_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_email"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="124dp"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            app:fontFamily="@font/lato_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/email_title"
            app:layout_constraintTop_toBottomOf="@+id/email_title"
            app:layout_constraintVertical_bias="0.483" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/whatsapp_row"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/img_whatsapp"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/whatsapp"
            android:tint="@color/icon_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/whatsapp" />

        <TextView
            android:id="@+id/whatsapp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/whatsapp_title"
            android:textAlignment="textStart"
            android:textSize="@dimen/h2_title"
            app:fontFamily="@font/lato_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_whatsapp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/whatsapp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="124dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/whatsapp"
            app:fontFamily="@font/lato_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/whatsapp_title"
            app:layout_constraintTop_toBottomOf="@+id/whatsapp_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/photo_row"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/photo_img"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/photo_text"
            android:tint="@color/icon_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photo" />

        <TextView
            android:id="@+id/photo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/photo_title"
            android:textAlignment="textStart"
            android:textSize="@dimen/h2_title"
            app:fontFamily="@font/lato_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/photo_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="124dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/photo_text"
            app:fontFamily="@font/lato_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/photo_title"
            app:layout_constraintTop_toBottomOf="@+id/photo_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>